# log_marco

./: Cargo.toml  README.md
src/: lib.rs
src/check/: depend_crate_chack.rs  function_name_check.rs  mod.rs
src/tests/: test_log.rs
