[package]
name = "log_macro"
version = "0.0.1"
authors = ["lyh"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2024"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "1.0",features = ["proc-macro"] }

