[package]
name = "log_macro"
version = "0.0.1"
authors = ["lyh"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2024"

[lib]
proc-macro = true

[[test]]
name = "test-log"
path = "src/tests/test_log.rs"

[dependencies]
quote = "1"
syn = { version = "1.0",features = ["full"] }
proc-macro2 = {version = "*"}

